@@ -1,10 +1,12 @@
 Variables that should be set in order to work with gdcmPython:
-GDCM_DICT_PATH path to the dictionary GDCM_SOURCE/Dicts/
-GDCM_DATA_PATH path to gdcmData
-PYTHONPATH path to both GDCM_BIN and GDCM_BIN/bin
+GDCM_DATA_ROOT path to gdcmData
+PYTHONPATH path to both 
+ - GDCM_BIN
+ - GDCM_BIN/bin (for linux) or GDCM_BIN/bin/Release (for Windows)
 
 e.g.
 
 export GDCM_DICT_PATH=~/cvs/gdcm/Dicts/
 export GDCM_DATA_PATH=~/cvs/gdcmData/
 export PYTHONPATH=~/cvs/gdcmbin/bin:~/cvs/gdcmbin/
+
