@@ -14,7 +14,7 @@ from gdcmPython.core import *
 try:
    fileName = sys.argv[1]
 except IndexError:
-   fileName = os.path.join(GDCM_DATA_PATH, "test.acr")
+   fileName = os.path.join(GDCM_DATA_ROOT, "test.acr")
 
 try:
    printLevel = int(sys.argv[2])
