@@ -1,2 +1,0 @@
-gdcmVERSION="0.4.1"
-
